 * showintf. Useless in qt and mac os X
 * transrate
 * Xlib x11, Xlib xvideo, Xlib glx. Use new XCB modules instead.
 * HAL. Use libudev instead.
 * gtk_main, gtk_main2, gnome_main, gnome_main2 and pda interfaces
 * WinCE and qnx interfaces
 * opie, qte and qte_main
 * linear_resampler and trivial_resampler are removed. Use the ugly one.
 * XvMC accelerated modules. Use VAAPI instead.
 * opengllayer
 * cddax. Use cdda instead
 * cmml and tarkin codecs are removed because they are dead codecs.


Changes between 1.0.4 and 1.0.5 (not yet released):
---------------------------------------------------
Mac OS X Interface:
 * Improved support for the 2009 Apple Remote


Changes between 1.0.3 and 1.0.4:
--------------------------------

Audio outputs:
 * Fix deadlocks in the audio output core
 * Make PulseAudio the default output if available

Video outputs:
 * Fix fullscreen mode with KDE 4.3.3 and other window managers
 * Fix incompatibility with cairo-dock and compositing

Input:
 * Fix DVB scanning regression from VLC 1.0.3
 * Support for XZ-compressed byte stream (LZMA algorithm)

Playlist:
 * Support for .m3u8 playlist files (UTF-8 M3U)

Unix:
 * Support for xcb-keysyms version 0.3.4 or higher
 * Fix globalhotkeys on FreeBSD

Qt4 interface:
 * Fix opening V4L version 1 devices
 * Fix default destination ports in the streaming wizard

Translations:
  * New Walloon translation
  * Swedish, Ukrainian and French translation updates


Changes between 1.0.2 and 1.0.3:
--------------------------------

Video outputs:
 * Fix video quality when resizing the video on Windows Vista and 7, due to
   regressions in most popular drivers
 * New deinterlacers modules based on yadif and yadif(x2) algorithms

Decoders:
 * Windows version supports now natively the WMA Professional codec, as it
   didn't work in the packaged version of 1.0.2
 * Fix downmixing of particual 4.0 AC-3 audio tracks

Encoders:
 * x264 has profile-limitter, like: